---
config:
  theme: base
  # fontFamily precisa ser chave de topo — dentro de themeVariables é ignorada
  fontFamily: "Helvetica Neue, Helvetica, Arial, sans-serif"
  themeVariables:
    fontSize: 22px
    lineColor: "#336791"
    primaryColor: "#eaf0f5"
    primaryTextColor: "#1a1a1a"
    primaryBorderColor: "#336791"
    edgeLabelBackground: "#fdfdfb"
---
erDiagram
    USUARIO ||--|| ALUNO : "é"
    USUARIO ||--|| PROFESSOR : "é"
    USUARIO ||--|| SERVIDOR : "é"
    USUARIO {
        int matricula PK
        varchar nome
        varchar email
    }
    ALUNO {
        int matricula PK "FK de USUARIO"
        varchar curso
        int semestre_ingresso
    }
    PROFESSOR {
        int matricula PK "FK de USUARIO"
        varchar departamento
        varchar titulacao
    }
    SERVIDOR {
        int matricula PK "FK de USUARIO"
        varchar setor
    }
